Fix sticky hover state on mobile devices by using hover:hover media query

--- a/frontend/src/views/player/Question.css
+++ b/frontend/src/views/player/Question.css
@@ -18,9 +18,11 @@
     margin-bottom: 4vh;
 }
 
-.player-answer:hover {
-    background-color: #EED8FC;
-    cursor: pointer;
+@media (hover: hover) {
+    .player-answer:hover {
+        background-color: #EED8FC;
+        cursor: pointer;
+    }
 }
 
 .player-answer-letter {
